Fix link join us in page welcome

--- a/src/templates/welcome.html
+++ b/src/templates/welcome.html
@@ -10,7 +10,7 @@
     <p>
       We're revolutionizing the way that people think about
       collaboration and communication in their team, and we're looking
-      for great people to <a href='#!/note/18286ed8-cafb-4e16-9cfc-fa8a2931e8fa' class='overlay'>join us</a>.
+      for great people to <a href='https://docs.google.com/document/d/1GVbY4oqODDP32CTPeyC2filn4eZftAl4wFt0vajOO7U/pub' class='overlay'>join us</a>.
     </p>
     <h2>Features:</h2>
 
